--- a/webPackage/css/SASS/partials/_colors.scss
+++ b/webPackage/css/SASS/partials/_colors.scss
@@ -1,4 +1,5 @@
-// define any new color variables here 
+
+// ---------------------------------------- COLORS TESTING 
 
 $GRAY: #4a4a4a;
 $LIGHT_GRAY: #E9E8E3;
@@ -12,22 +13,152 @@ $LIGHT_WHITE: #F3F6FB;
 $BLACK: #000;
 $WHITE: #FFF;
 $LIGHTER_FUXSIA: #ff3caa;
+$GREEN: #4CAF50;
+$RED: #F44336;
+$DEEP_ORANGE: #FF5722;
+$PINK: #E91E63;
+
+//$LIGHT_GRAY, $ZENBURN_BG, $GRAY, $DARK_GRAY, $FUXSIA, $LIGHT_WHITE
+
+
+$base_color: $WHITE;
 
 
 
-// add combinations of colors here 
-// general_bg -*- right_code_bg -*- general_text -*- links_text -*- details (as hover) -*- left_code_bg 
+// ----------------------------- 3 COLORS middle intensity 
+
+$color1: getMiddleLightness($base_color);
+
+$color2: complement($color1);
+
+$color3: saturate(adjust-hue($color1, -60deg), 80%);
 
 
-$combo1: $LIGHT_GRAY, $ZENBURN_BG, $GRAY, $DARK_GRAY, $FUXSIA, $LIGHT_WHITE;
+// ------------------------------------------------ SHADES 
 
-$combo2: $DARK_GRAY, $BLACK, $LIGHT_GRAY, $LIGHT_WHITE, $LIGHT_FUXSIA, $BLACK;
+$dark_color1: darken($color1, 20%);
+$darker_color1: darken($color1, 35%);
+$darkest_color1: darken($color1, 50%);
+
+$lightest_color1: lighten($color1, 50%);
+$lighter_color1: lighten($color1, 45%);
+$light_color1: lighten($color1, 20%);
+
+$transparent_base_color: rgba($color1, .4);
 
 
-$combo3: $DARK_BLUE, $BLACK, $LIGHT_GRAY, $LIGHT_WHITE, $LIGHT_FUXSIA;
-
-$combo4: $FUXSIA, $ZENBURN_BG, $LIGHT_GRAY, $LIGHT_WHITE, $LIGHT_FUXSIA, $ZENBURN_BG;
-
-$combo5: $LIGHTER_WHITE, $ZENBURN_BG, $GRAY, $DARK_GRAY, $FUXSIA, $WHITE;
+$dark_color2: darken($color2, 35%);
+$light_color2: lighten($color2, 25%);
 
 
+$dark_color3: darken($color3, 15%);
+$light_color3: lighten($color3, 40%);
+
+
+
+// ------------------------------------ COLOR ASSIGNATIONS 
+
+// --------------------------------- middle intensity 
+
+$bg_main: $lighter_color1;
+$text: $darkest_color1;
+$text_headers: $darker_color1;
+
+$text_links: $color2;
+$text_active_links: $dark_color3;
+$deco_links: $color3;
+
+$em: $darkest_color1;
+
+$bg_code: $darker_color1;
+$bg_code_3col: $darker_color1;
+$text_code: $lightest_color1;
+
+$bg_hightlight: $dark_color3;
+$text_hightlight: $light_color3;
+
+$bg_details: $light_color3;
+$text_details: $lightest_color1;
+
+$borders1: $lightest_color1;
+$borders2: $light_color2;
+
+
+
+// ------------------------------------------- isDarkColor 
+
+@function isDarkColor($c) {
+  $i: getIntensity($c); @debug $i;
+  @if ($i < 282) {
+    @return true;
+  } @else {
+    @return false;
+  }
+}
+
+
+// ------------------------------------------ isLightColor 
+
+@function isLightColor($c) {
+  $i: getIntensity($c); @debug $i;
+  @if ($i > 482) {
+    @return true;
+  } @else {
+    @return false;
+  }
+}
+
+
+// --------------------------------------- base color 
+// if color is dark, general assignations = lighter
+// if color is light, general assignations = above
+// option if color is middle intensity = above
+
+$lightBackground: false;
+
+@if ($lightBackground == false) {
+
+	$color3: saturate(adjust-hue($color1, 170deg), 95%);
+
+	$bg_main: $base_color;
+
+	@if isDarkColor($base_color) {
+
+		@debug 'is dark';
+
+		$text: $light_color1;
+		$text_headers: $lighter_color1;
+
+		$text_links: $light_color2;
+		$text_active_links: $light_color3;
+		$deco_links: $color3;
+
+		$em: $lightest_color1;
+
+		$bg_code: $lighter_color1;
+		$bg_code_3col: $darkest_color1;
+		$text_code: $dark_color1;
+
+		$bg_hightlight: $light_color3;
+		$text_hightlight: $dark_color3;
+
+		$bg_details: $light_color3;
+		$text_details: $dark_color1;
+
+	}
+
+	@if isLightColor($base_color) {
+
+		@debug 'is light';
+
+		$text: $darker_color1;
+		$text_headers: $darkest_color1;
+
+		$bg_details: $dark_color3;
+		$text_details: $lighter_color1;
+
+		$borders1: $light_color1;
+		$borders2: $light_color3;
+
+	}
+}
