--- a/webPackage/css/style.css
+++ b/webPackage/css/style.css
@@ -22,68 +22,71 @@
   top: 0; }
 
 #enjoy-mondays {
-  background-color: #f2f2f2; }
+  background-color: #FFF; }
   #enjoy-mondays #main-header,
   #enjoy-mondays .content-root,
   #enjoy-mondays .menubar,
   #enjoy-mondays .content,
   #enjoy-mondays h1, #enjoy-mondays h2, #enjoy-mondays h3, #enjoy-mondays h4, #enjoy-mondays h5, #enjoy-mondays h6 {
-    background-color: #f2f2f2; }
+    background-color: #FFF; }
   @media (min-width: 1180px) {
     #enjoy-mondays .content,
     #enjoy-mondays .content-root {
       background-color: #262626;
-      background: -webkit-gradient(linear, left top, right top, color-stop(0.8, #262626), color-stop(1, rgba(255, 255, 255, 0)));
-      background: -webkit-linear-gradient(left, #262626 80%, rgba(255, 255, 255, 0) 100%);
-      background: -moz-linear-gradient(left, #262626 80%, rgba(255, 255, 255, 0) 100%);
-      background: -o-linear-gradient(left, #262626 80%, rgba(255, 255, 255, 0) 100%);
-      background: -ms-linear-gradient(left, #262626 80%, rgba(255, 255, 255, 0) 100%);
-      background: linear-gradient(left, #262626 80%, rgba(255, 255, 255, 0) 100%);
-      -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
-      box-shadow: 0 1px 0 rgba(255, 255, 255, 0.4); } }
+      background: -webkit-gradient(linear, left top, right top, color-stop(0.8, #262626), color-stop(1, rgba(179, 179, 179, 0)));
+      background: -webkit-linear-gradient(left, #262626 95%, rgba(179, 179, 179, 0) 100%);
+      background: -moz-linear-gradient(left, #262626 95%, rgba(179, 179, 179, 0) 100%);
+      background: -o-linear-gradient(left, #262626 95%, rgba(179, 179, 179, 0) 100%);
+      background: -ms-linear-gradient(left, #262626 95%, rgba(179, 179, 179, 0) 100%);
+      background: linear-gradient(left, #262626 95%, rgba(179, 179, 179, 0) 100%); } }
+  #enjoy-mondays.big-h3 {
+    background: -webkit-gradient(linear, left top, right top, color-stop(0.8, #FFF), color-stop(1, rgba(179, 179, 179, 0)));
+    background: -webkit-linear-gradient(left, #FFF 80%, rgba(179, 179, 179, 0) 100%);
+    background: -moz-linear-gradient(left, #FFF 80%, rgba(179, 179, 179, 0) 100%);
+    background: -o-linear-gradient(left, #FFF 80%, rgba(179, 179, 179, 0) 100%);
+    background: -ms-linear-gradient(left, #FFF 80%, rgba(179, 179, 179, 0) 100%);
+    background: linear-gradient(left, #FFF 80%, rgba(179, 179, 179, 0) 100%); }
   #enjoy-mondays .content p, #enjoy-mondays .content ul, #enjoy-mondays .content ol {
-    background-color: #f2f2f2; }
+    background-color: #FFF; }
   #enjoy-mondays .content code {
     background-color: #262626; }
   #enjoy-mondays .content .hljs, #enjoy-mondays .content pre > code {
-    background-color: #262626; }
+    background-color: #262626;
+    background: -webkit-gradient(linear, left top, right top, color-stop(0.8, #262626), color-stop(1, rgba(230, 230, 230, 0)));
+    background: -webkit-linear-gradient(left, #262626 70%, rgba(230, 230, 230, 0) 80%);
+    background: -moz-linear-gradient(left, #262626 70%, rgba(230, 230, 230, 0) 80%);
+    background: -o-linear-gradient(left, #262626 70%, rgba(230, 230, 230, 0) 80%);
+    background: -ms-linear-gradient(left, #262626 70%, rgba(230, 230, 230, 0) 80%);
+    background: linear-gradient(left, #262626 70%, rgba(230, 230, 230, 0) 80%); }
 
 #enjoy-mondays.big-h3 {
-  background: -webkit-gradient(linear, left top, right top, color-stop(0.8, #f2f2f2), color-stop(1, rgba(255, 255, 255, 0)));
-  background: -webkit-linear-gradient(left, #f2f2f2 80%, rgba(255, 255, 255, 0) 100%);
-  background: -moz-linear-gradient(left, #f2f2f2 80%, rgba(255, 255, 255, 0) 100%);
-  background: -o-linear-gradient(left, #f2f2f2 80%, rgba(255, 255, 255, 0) 100%);
-  background: -ms-linear-gradient(left, #f2f2f2 80%, rgba(255, 255, 255, 0) 100%);
-  background: linear-gradient(left, #f2f2f2 80%, rgba(255, 255, 255, 0) 100%);
-  -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
-  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.4); }
+  -webkit-box-shadow: 0 1px 0 rgba(161, 18, 161, 0.4);
+  box-shadow: 0 1px 0 rgba(161, 18, 161, 0.4); }
 #enjoy-mondays #main-header {
-  text-shadow: 0 1px 0 white;
-  border-bottom: solid 1px white; }
+  text-shadow: 0 1px 0 #f2f2f2;
+  border-bottom: solid 1px #b3b3b3; }
   #enjoy-mondays #main-header li {
-    border-left: 1px solid #bfbfbf;
-    border-right: 1px solid white; }
+    border-left: 1px solid #fad1fa;
+    border-right: 1px solid #b3b3b3; }
   #enjoy-mondays #main-header h1 + ul {
-    border-left: 1px solid #bfbfbf; }
+    border-left: 1px solid #fad1fa; }
 #enjoy-mondays .menubar {
-  border-right: solid 1px white; }
+  border-right: solid 1px #b3b3b3; }
 #enjoy-mondays .content h1:before, #enjoy-mondays .content h2:before, #enjoy-mondays .content h3
 .big-heading:before {
-  background: -webkit-gradient(linear, left top, right top, color-stop(0.8, #e6e6e6), color-stop(1, rgba(255, 255, 255, 0)));
-  background: -webkit-linear-gradient(left, #e6e6e6 80%, rgba(255, 255, 255, 0) 100%);
-  background: -moz-linear-gradient(left, #e6e6e6 80%, rgba(255, 255, 255, 0) 100%);
-  background: -o-linear-gradient(left, #e6e6e6 80%, rgba(255, 255, 255, 0) 100%);
-  background: -ms-linear-gradient(left, #e6e6e6 80%, rgba(255, 255, 255, 0) 100%);
-  background: linear-gradient(left, #e6e6e6 80%, rgba(255, 255, 255, 0) 100%);
-  -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
-  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.4); }
+  background: -webkit-gradient(linear, left top, right top, color-stop(0.8, #a112a1), color-stop(1, rgba(179, 179, 179, 0)));
+  background: -webkit-linear-gradient(left, #a112a1 80%, rgba(179, 179, 179, 0) 100%);
+  background: -moz-linear-gradient(left, #a112a1 80%, rgba(179, 179, 179, 0) 100%);
+  background: -o-linear-gradient(left, #a112a1 80%, rgba(179, 179, 179, 0) 100%);
+  background: -ms-linear-gradient(left, #a112a1 80%, rgba(179, 179, 179, 0) 100%);
+  background: linear-gradient(left, #a112a1 80%, rgba(179, 179, 179, 0) 100%); }
 #enjoy-mondays .content h4 {
-  border-bottom: solid 1px rgba(255, 255, 255, 0.07); }
+  border-bottom: solid 1px rgba(179, 179, 179, 0.07); }
 
 #enjoy-mondays {
   font-family: "Lato", sans-serif;
   font-weight: 100;
-  color: black; }
+  color: #262626; }
   #enjoy-mondays a {
     font-size: 1em;
     font-weight: 900;
@@ -91,7 +94,7 @@
   #enjoy-mondays h1, #enjoy-mondays h2, #enjoy-mondays h3, #enjoy-mondays h4, #enjoy-mondays h5, #enjoy-mondays h6 {
     font-family: "Dosis", sans-serif !important;
     font-weight: 600 !important;
-    color: #262626; }
+    color: black; }
   #enjoy-mondays h1 {
     font-size: 2.5em;
     text-transform: uppercase; }
@@ -107,14 +110,14 @@
 #enjoy-mondays a {
   text-decoration: none; }
   #enjoy-mondays a:hover, #enjoy-mondays a.active {
-    border-bottom: 3px solid gray; }
+    border-bottom: 3px solid #e619e5; }
     #enjoy-mondays a:hover::after, #enjoy-mondays a.active::after {
       background: none; }
 #enjoy-mondays .menu a:visited, #enjoy-mondays .menu a:hover, #enjoy-mondays .menu a.active {
   margin-left: -3px;
-  border-left: 3px solid gray;
-  border-bottom: none;
-  color: #595959 !important; }
+  border-bottom: none !important;
+  border-left: 3px solid #e619e5;
+  color: #a112a1; }
 #enjoy-mondays .menu .level-2 > a {
   padding-left: 3px; }
 
