--- a/webPackage/css/SASS/style.scss
+++ b/webPackage/css/SASS/style.scss
@@ -1,389 +1,13 @@
-@import "_settings";
 
+@import "settings/_settings";
+
+@import "partials/_allMixins";
 @import "partials/_classes";
 
-@import "partials/_allmixins";
+@import "layouts/_layout";
+@import "colors/_colors-css";
+@import "fonts/_fonts-css";
 
-@import "partials/_colors";
-
-
-// ------------------------------------------- BACKGROUNDS 
-
-#{$theme} { 
-
-  background-color: $bg_main;
-
-  #main-header, 
-  // left menu and central content background need re-stating
-  .content-root,
-  .menubar,
-  .content,
-  h1, h2, h3, h4, h5, h6 {
-    background-color: $bg_main;
-  }
-
-  // --------------------- 3 COLUMN BACKGROUND for big layout
-  @media (min-width: 1180px) {
-    .content,
-    .content-root {
-      background-color: $bg_code;
-      @include gradientBg($bg_code_3col, $borders1, 95%);
-    }
-  }
-
-  &.big-h3 {
-    @include gradientBg($bg_main, $borders1);
-  }
-
-  .content {
-    p, ul, ol {
-      background-color: $bg_main;
-    }
-
-    code {
-      background-color: $bg_code;
-    } 
-
-    // ------- HIGHLIGHT JS OVERRIDE
-    .hljs, pre > code {
-      background-color: $bg_code_3col;
-      @include gradientBg($bg_code_3col, lighten($borders1, 20%), 70%, 80%);
-    }
-  }
-}
-
-// ----------------------------------------------- BORDERS 
-#{$theme} {
-
-  &.big-h3 {
-    @include boxShadow($bg_details);
-  }
-
-  #main-header {  
-
-    text-shadow: 0 1px 0 $text_details;
-   
-    border-bottom: solid 1px $borders1;
-
-    li {
-      border-left: 1px solid $borders2;
-      border-right: 1px solid $borders1;
-    }
-
-    h1 + ul {
-      border-left: 1px solid $borders2;
-    }
-  }
-
-  .menubar {
-    border-right: solid 1px $borders1;
-  }
-
-  .content {
-    h1, h2, h3
-    .big-heading {
-      &:before {
-        @include gradientBg($bg_details, $borders1);
-      }
-    }  
-
-    h4 {
-      border-bottom: solid 1px rgba($borders1, .07);
-    }
-  }
-}
-
-
-// ------------------------------------------------- FONTS 
-#{$theme} { 
-
-  // ---------------------- GENERAL
-  font-family: $font_1;
-  font-weight: $font_weight_1;
-  color: $text;  
-
-  // ------------------------ LINKS 
-  a {
-    font-size: $font_size_3;
-    font-weight: $font_weight_3;
-    color: $text_links;
-  }
-
-  // --------------------------- Hi 
-
-  h1, h2, h3, h4, h5, h6 {
-    font-family: $font_2 !important;
-    font-weight: $font_weight_2 !important; 
-    color: $text_headers;
-  }
-
-  // --------------------------- H1 
-  h1 {
-    font-size: $font_size_4;  
-    text-transform: uppercase;
-  }
-
-  // ---------------------- CONTENT 
-
-  .content {
-    p {
-      font-size: $font_size_1;
-    }
-
-    pre {
-      font-size: $font_size_2;
-    }
-
-    p, li {
-      > code {
-        color: $text_code;
-      }
-    }
-
-    em {
-      color: $em;
-    }
-  }
-}
-
-
-// ------------------------------------------------- LINKS 
-
-#{$theme} {
-  
-  // ----------------- ALL links
-  a {
-    text-decoration: none;
-
-    &:hover,
-    &.active {
-      border-bottom: 3px solid $deco_links;
-
-      &::after {
-        // remove dash from links
-        background: none;
-      }
-    }
-  }
-
-  // ----------- SIDE MENU links
-  .menu {
-    a {
-      &:visited, 
-      &:hover,
-      &.active {
-        margin-left: -3px;
-        border-bottom: none !important;
-        border-left: 3px solid $deco_links;
-        color: $text_active_links;
-      }
-    }
-
-    // make room for border-left as some flatdoc level-x links don't have
-    .level-2 > a {
-      padding-left: 3px;
-    }
-  }
-}
-
-
-// ------------------------------------------- MAIN HEADER 
-#{$theme} #main-header {  
-
-  // -------------------------- TITLE AND MENU
-  .left-content {
-
-    position: relative;
-    left: 220px;
-
-    // - (when side menu drops out)
-    @media (max-width: 767px) {
-
-      // ------------ move to left
-      left: 0;
-    }
-  }
-
-  li {
-    @media (max-width: 480px) {
-      margin-left: 20px;
-    }
-  }
-
-  // -------------------------- GITHUB BUTTONS
-  .right-content {
-
-    float: right;
-    height: $header_height;
-
-    @media (max-width: 900px) {
-
-      // ------- => stack in 2 rows
-      width: 168px;
-      height: $header_height_2;
-      top: 3px;
-    }
-
-    @media (max-width: 650px) {
-
-      // ------------------ => hide
-      display: none;
-    }
-  }
-
-  // ---------------------------------------------- UNDER 650px
-  @media (max-width: 650px) {
-
-  // -------------------------- TITLE AND MENU 
-  // ---------------------------- => fullwidth
-
-    padding-left: 0;
-    padding-right: 0;
-
-    .left-content {
-      float: none;
-
-      h1 {
-        margin-left: 30px;
-        float: left;
-      }
-
-      ul {
-        float: right;
-        margin-right: 30px;
-
-        li {
-          float: left;
-
-          &:last-child a {
-            padding-right: 0;
-          }
-        }
-      }      
-    }
-  }
-  // ---------------------------------------------- UNDER 350px
-  @media (max-width: 350px) {
-
-  // -------------------------- TITLE AND MENU 
-  // ---------------------- => stack in 2 rows
-  
-    margin: 0;
-    padding: 0;
-    text-align: center;
-  // ----------------------- new header height
-    height: $header_height_2;
-
-    .left-content {
-      h1 {
-        float: none;
-        margin: 10px auto 12px auto;
-      }
-
-      ul {
-        float: none;
-        display: inline-block;
-      }
-    }
-  }
-}
-
-// -------------------------------- FIX HEADER PLACEHOLDER 
-
-#{$theme} #fix-placeholder {
-  
-  height: $h;
-
-  @media (max-width: 350px) {
-    height: $h_2;
-  }
-}
-
-
-// ----------------------------------------------- CONTENT 
-#{$theme} .content {
-
-  // -------------- (when side menu drops out)
-  @media (max-width: 767px) {
-
-    // ---------------------------- => center
-    padding-left: 0;
-    padding-right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%;
-  }
-
-  hr {
-    border: 0;
-    height: 3px;
-    width: 18%;
-    margin: 0 auto 3%;
-    clear: both;
-  }
-}
-
-
-// -------------------------------------------------- LOGO 
-#{$theme} {
-
-  #logo {
-    position: absolute;
-    left: 20px;
-    bottom: 20px;
-    width: $logo_footer_width;
-    height: auto; 
-
-    img {
-      width: 100%;
-    } 
-  } 
-}
-
-
-// --------------------------------- 3 COLUMN BACKGROUND for big layout
-
-@media (min-width: 1180px) {
-
-  #{$theme} .content {
-    
-    width: 100%;
-    padding-top: 0;
-    padding-bottom: 0;
-
-    h1, h2, h3, h4, h5, h6 {
-      width: 550px;
-      margin: 0;
-      padding-left: 40px;
-      position: relative;
-      z-index: 2;
-    }
-
-    h1:first-child {
-      padding-top: 30px;
-    }
-
-    ul, ol {
-      margin-left: 0;
-      padding-left: 60px !important;
-      position: relative;
-      z-index: 2;
-    }
-
-    p {
-      position: relative;
-      z-index: 2;
-    }
-
-    pre {
-      width: calc(100% - 550px);
-    }
-
-    & > *:last-child {
-      padding-bottom: 40px;
-    }
-  }
-}
 
 
 // ------------------------------- COLOR SWAPPER TEST (only over 767px)
