Add font3. Add toFontList function.

--- a/webPackage/css/SASS/fonts/_fonts-constants.scss
+++ b/webPackage/css/SASS/fonts/_fonts-constants.scss
@@ -2,6 +2,7 @@
 
 // SANS-SERIF
 
+$SANSERIF: sans-serif;
 $LATO: 'Lato', sans-serif;
 $DOSIS: 'Dosis', sans-serif;
 $ARIAL: Arial, Helvetica, sans-serif;
@@ -14,6 +15,7 @@ $HELVETICA: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
 // SERIF
 
+$SERIF: serif;
 $TIMES: "Times New Roman", Times, serif;
 $GEORGIA: Georgia, serif;
 $PALATINO: Palatino Linotype’, ‘Book Antiqua’, Palatino, serif;
@@ -21,6 +23,7 @@ $PALATINO: Palatino Linotype’, ‘Book Antiqua’, Palatino, serif;
 
 // MONOSPACE
 
+$MONOSPACE: monospace;
 $LUCIDA_CONSOLE: ‘Lucida Console’, Monaco, monospace;
 $COURIER: ‘Courier New’, Courier, monospace;
 $CONSOLAS: Consolas, monaco, monospace;
