--- a/webPackage/css/SASS/settings/_settings.scss
+++ b/webPackage/css/SASS/settings/_settings.scss
@@ -102,6 +102,11 @@
   $font_2: $CONSOLAS, $COURIER;
 
 
+  // P > CODE
+  
+  $font_3: $COURIER, $CONSOLAS;
+
+
   // ---------------------------- SIZE
 
   // TEXT, P
