--- a/webPackage/css/SASS/fonts/_fonts-css.scss
+++ b/webPackage/css/SASS/fonts/_fonts-css.scss
@@ -1,6 +1,12 @@
 @import "_fonts-constants";
 @import "_fonts-defaultSettings";
 
+
+$font_1: toFontList($font_1);
+$font_2: toFontList($font_2);
+$font_3: toFontList($font_3);
+
+
 #{$theme} { 
 
   // ---------------------- GENERAL
@@ -31,6 +37,10 @@
   .content {
     p {
       font-size: $font_size_1;
+
+      & > code {
+        font-family: $font_3;
+      }
     }
 
     pre {
