--- a/webPackage/css/SASS/fonts/_fonts-defaultSettings.scss
+++ b/webPackage/css/SASS/fonts/_fonts-defaultSettings.scss
@@ -1,6 +1,7 @@
 
 $font_1: $LATO !default;
 $font_2: $DOSIS !default;
+$font_3: $COURIER !default;
 $font_size_1: 1.25em !default; 
 $font_size_2: 1.15em !default;
 $font_size_3: 1em !default;
