--- a/webPackage/css/style.css
+++ b/webPackage/css/style.css
@@ -136,49 +136,49 @@
   @media (min-width: 1180px) {
     #enjoy-mondays .content,
     #enjoy-mondays .content-root {
-      background-color: black;
-      background: -webkit-gradient(linear, left top, right top, color-stop(0.8, black), color-stop(1, rgba(212, 210, 201, 0)));
-      background: -webkit-linear-gradient(left, black 95%, rgba(212, 210, 201, 0) 100%);
-      background: -moz-linear-gradient(left, black 95%, rgba(212, 210, 201, 0) 100%);
-      background: -o-linear-gradient(left, black 95%, rgba(212, 210, 201, 0) 100%);
-      background: -ms-linear-gradient(left, black 95%, rgba(212, 210, 201, 0) 100%);
-      background: linear-gradient(left, black 95%, rgba(212, 210, 201, 0) 100%); } }
+      background-color: #2b2922;
+      background: -webkit-gradient(linear, left top, right top, color-stop(0.8, #2b2922), color-stop(1, rgba(188, 185, 169, 0)));
+      background: -webkit-linear-gradient(left, #2b2922 95%, rgba(188, 185, 169, 0) 100%);
+      background: -moz-linear-gradient(left, #2b2922 95%, rgba(188, 185, 169, 0) 100%);
+      background: -o-linear-gradient(left, #2b2922 95%, rgba(188, 185, 169, 0) 100%);
+      background: -ms-linear-gradient(left, #2b2922 95%, rgba(188, 185, 169, 0) 100%);
+      background: linear-gradient(left, #2b2922 95%, rgba(188, 185, 169, 0) 100%); } }
   #enjoy-mondays.big-h3 {
-    background: -webkit-gradient(linear, left top, right top, color-stop(0.8, #E9E8E3), color-stop(1, rgba(212, 210, 201, 0)));
-    background: -webkit-linear-gradient(left, #E9E8E3 80%, rgba(212, 210, 201, 0) 100%);
-    background: -moz-linear-gradient(left, #E9E8E3 80%, rgba(212, 210, 201, 0) 100%);
-    background: -o-linear-gradient(left, #E9E8E3 80%, rgba(212, 210, 201, 0) 100%);
-    background: -ms-linear-gradient(left, #E9E8E3 80%, rgba(212, 210, 201, 0) 100%);
-    background: linear-gradient(left, #E9E8E3 80%, rgba(212, 210, 201, 0) 100%); }
+    background: -webkit-gradient(linear, left top, right top, color-stop(0.8, #E9E8E3), color-stop(1, rgba(188, 185, 169, 0)));
+    background: -webkit-linear-gradient(left, #E9E8E3 80%, rgba(188, 185, 169, 0) 100%);
+    background: -moz-linear-gradient(left, #E9E8E3 80%, rgba(188, 185, 169, 0) 100%);
+    background: -o-linear-gradient(left, #E9E8E3 80%, rgba(188, 185, 169, 0) 100%);
+    background: -ms-linear-gradient(left, #E9E8E3 80%, rgba(188, 185, 169, 0) 100%);
+    background: linear-gradient(left, #E9E8E3 80%, rgba(188, 185, 169, 0) 100%); }
   #enjoy-mondays .content p, #enjoy-mondays .content ul, #enjoy-mondays .content ol {
     background-color: #E9E8E3; }
   #enjoy-mondays .content code {
-    background-color: black; }
+    background-color: #2b2922; }
   #enjoy-mondays .content .hljs, #enjoy-mondays .content pre > code {
-    background-color: black;
-    background: -webkit-gradient(linear, left top, right top, color-stop(0.8, black), color-stop(1, rgba(255, 255, 255, 0)));
-    background: -webkit-linear-gradient(left, black 70%, rgba(255, 255, 255, 0) 80%);
-    background: -moz-linear-gradient(left, black 70%, rgba(255, 255, 255, 0) 80%);
-    background: -o-linear-gradient(left, black 70%, rgba(255, 255, 255, 0) 80%);
-    background: -ms-linear-gradient(left, black 70%, rgba(255, 255, 255, 0) 80%);
-    background: linear-gradient(left, black 70%, rgba(255, 255, 255, 0) 80%); }
+    background-color: #2b2922;
+    background: -webkit-gradient(linear, left top, right top, color-stop(0.8, #2b2922), color-stop(1, rgba(233, 232, 226, 0)));
+    background: -webkit-linear-gradient(left, #2b2922 70%, rgba(233, 232, 226, 0) 80%);
+    background: -moz-linear-gradient(left, #2b2922 70%, rgba(233, 232, 226, 0) 80%);
+    background: -o-linear-gradient(left, #2b2922 70%, rgba(233, 232, 226, 0) 80%);
+    background: -ms-linear-gradient(left, #2b2922 70%, rgba(233, 232, 226, 0) 80%);
+    background: linear-gradient(left, #2b2922 70%, rgba(233, 232, 226, 0) 80%); }
 
 #enjoy-mondays {
-  color: black; }
+  color: #2b2922; }
   #enjoy-mondays a {
     color: #70758f;
     line-height: 17px;
     margin-top: 3px;
     margin-bottom: -3px; }
     #enjoy-mondays a:hover, #enjoy-mondays a.active {
-      border-bottom: 3px solid #f50aa7; }
+      border-bottom: 3px solid #f50a31; }
       #enjoy-mondays a:hover::after, #enjoy-mondays a.active::after {
         background: none; }
   #enjoy-mondays .menu a:visited, #enjoy-mondays .menu a:hover, #enjoy-mondays .menu a.active {
-    color: #5d043f !important;
+    color: #93061e !important;
     margin-left: -3px;
     border-bottom: none !important;
-    border-left: 3px solid #f50aa7; }
+    border-left: 3px solid #f50a31; }
   #enjoy-mondays .menu .level-2 > a {
     padding-left: 3px; }
   #enjoy-mondays h1, #enjoy-mondays h2, #enjoy-mondays h3, #enjoy-mondays h4, #enjoy-mondays h5, #enjoy-mondays h6 {
@@ -189,43 +189,45 @@
     color: black; }
 
 #enjoy-mondays.big-h3 {
-  -webkit-box-shadow: 0 1px 0 rgba(93, 4, 63, 0.4);
-  box-shadow: 0 1px 0 rgba(93, 4, 63, 0.4); }
+  -webkit-box-shadow: 0 1px 0 rgba(147, 6, 30, 0.4);
+  box-shadow: 0 1px 0 rgba(147, 6, 30, 0.4); }
 #enjoy-mondays #main-header {
-  text-shadow: 0 1px 0 white;
-  border-bottom: solid 1px #d4d2c9; }
+  text-shadow: 0 1px 0 #dddcd4;
+  border-bottom: solid 1px #bcb9a9; }
   #enjoy-mondays #main-header li {
-    border-left: 1px solid #fba2dd;
-    border-right: 1px solid #d4d2c9; }
+    border-left: 1px solid #f96c84;
+    border-right: 1px solid #bcb9a9; }
   #enjoy-mondays #main-header h1 + ul {
-    border-left: 1px solid #fba2dd; }
+    border-left: 1px solid #f96c84; }
 #enjoy-mondays .menubar {
-  border-right: solid 1px #d4d2c9; }
+  border-right: solid 1px #bcb9a9; }
 #enjoy-mondays .content h1:before, #enjoy-mondays .content h2:before, #enjoy-mondays .content h3
 .big-heading:before {
-  background: -webkit-gradient(linear, left top, right top, color-stop(0.8, #5d043f), color-stop(1, rgba(212, 210, 201, 0)));
-  background: -webkit-linear-gradient(left, #5d043f 80%, rgba(212, 210, 201, 0) 100%);
-  background: -moz-linear-gradient(left, #5d043f 80%, rgba(212, 210, 201, 0) 100%);
-  background: -o-linear-gradient(left, #5d043f 80%, rgba(212, 210, 201, 0) 100%);
-  background: -ms-linear-gradient(left, #5d043f 80%, rgba(212, 210, 201, 0) 100%);
-  background: linear-gradient(left, #5d043f 80%, rgba(212, 210, 201, 0) 100%); }
+  background: -webkit-gradient(linear, left top, right top, color-stop(0.8, #93061e), color-stop(1, rgba(188, 185, 169, 0)));
+  background: -webkit-linear-gradient(left, #93061e 80%, rgba(188, 185, 169, 0) 100%);
+  background: -moz-linear-gradient(left, #93061e 80%, rgba(188, 185, 169, 0) 100%);
+  background: -o-linear-gradient(left, #93061e 80%, rgba(188, 185, 169, 0) 100%);
+  background: -ms-linear-gradient(left, #93061e 80%, rgba(188, 185, 169, 0) 100%);
+  background: linear-gradient(left, #93061e 80%, rgba(188, 185, 169, 0) 100%); }
 #enjoy-mondays .content h4 {
-  border-bottom: solid 1px rgba(212, 210, 201, 0.07); }
+  border-bottom: solid 1px rgba(188, 185, 169, 0.07); }
 
 #enjoy-mondays {
-  font-family: Tahoma, Geneva, sans-serif, "Dosis", sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 100; }
   #enjoy-mondays a {
     font-size: 1em;
     font-weight: 900; }
   #enjoy-mondays h1, #enjoy-mondays h2, #enjoy-mondays h3, #enjoy-mondays h4, #enjoy-mondays h5, #enjoy-mondays h6 {
-    font-family: Consolas, monaco, monospace, ‘Courier New’, Courier, monospace !important;
+    font-family: "Dosis", sans-serif !important;
     font-weight: 600 !important; }
   #enjoy-mondays h1 {
     font-size: 2.5em;
     text-transform: uppercase; }
   #enjoy-mondays .content p {
     font-size: 1.25em; }
+    #enjoy-mondays .content p > code {
+      font-family: ‘Courier, New’, Courier, monospace; }
   #enjoy-mondays .content pre {
     font-size: 1.15em; }
 
