--- a/webPackage/css/SASS/fonts/_fonts-defaultSettings.scss
+++ b/webPackage/css/SASS/fonts/_fonts-defaultSettings.scss
@@ -1,11 +1,10 @@
-
-$font_1: $LATO !default;
-$font_2: $DOSIS !default;
-$font_3: $COURIER !default;
-$font_size_1: 1.25em !default; 
-$font_size_2: 1.15em !default;
-$font_size_3: 1em !default;
-$font_size_4: 2.5em !default; 
-$font_weight_1: $LIGHT !default;
-$font_weight_2: $BOLD !default;
-$font_weight_3: $BOLDER !default;
+$font_main: $LATO !default;
+$font_headers: $DOSIS !default;
+$font_code: $COURIER !default;
+$font_size_main: 1.25em !default; 
+$font_size_code: 1.15em !default;
+$font_size_links: 1em !default;
+$font_size_big: 2.5em !default; 
+$font_weight_main: $LIGHT !default;
+$font_weight_headers: $BOLD !default;
+$font_weight_links: $BOLDER !default;
