--- a/webPackage/css/style.css
+++ b/webPackage/css/style.css
@@ -216,13 +216,13 @@
   border-bottom: solid 1px rgba(212, 210, 201, 0.07); }
 
 #enjoy-mondays {
-  font-family: Tahoma, Geneva, sans-serif, "Dosis";
+  font-family: Tahoma, Geneva, sans-serif, "Times New Roman", Times, ‘Courier New’, Courier, monospace, serif;
   font-weight: 100; }
   #enjoy-mondays a {
     font-size: 1em;
     font-weight: 900; }
   #enjoy-mondays h1, #enjoy-mondays h2, #enjoy-mondays h3, #enjoy-mondays h4, #enjoy-mondays h5, #enjoy-mondays h6 {
-    font-family: Consolas, monaco, ‘Courier New’, Courier, monospace !important;
+    font-family: Consolas, monaco, ‘Courier New’, Courier, ‘Lucida Console’, Monaco, monospace !important;
     font-weight: 600 !important; }
   #enjoy-mondays h1 {
     font-size: 2.5em;
